@@ -228,92 +228,6 @@ ccss_stylesheet_query_type (ccss_stylesheet_t const	*self,
  * `iter' is used for the recursion.
  */
 static bool
-collect_type_r (ccss_stylesheet_t const	*self,
-	      ccss_node_t const		*node, 
-	      ccss_node_t const		*iter,
-	      bool			 as_base,
-	      ccss_selector_group_t	*result_group)
-{
-	ccss_node_class_t const	*node_class;
-	ccss_selector_group_t	*group;
-	char const		*type_name;
-	bool			 ret;
-
-	node_class = node->node_class;
-
-	if (!iter) {
-		iter = node;
-	}
-
-	type_name = node_class->get_type (iter);
-
-	ret = false;
-	if (type_name) {
-
-		ccss_node_t *base;
-
-		group = g_hash_table_lookup (self->groups, type_name);
-		if (group) {
-			ret = ccss_selector_group_query_collect (group, node, as_base, result_group);
-		}
-
-		/* Try to match base types. */
-		base = node_class->get_base_style (iter);
-		if (base) {
-			ret |= collect_type_r (self, node, base, true, result_group);
-			node_class->release (base);
-		}
-	} else {
-		g_warning ("No type name");
-	}
-
-	return ret;
-}
-
-/**
- * ccss_stylesheet_query_collect:
- * @self:		a #ccss_stylesheet_t.
- * @node:		a #ccss_node_t implementation that is used by libccss to retrieve information about the underlying document.
- * @as_base:		whether the results should be accumulates with lowered priority, e.g. when querying for base style information.
- * @result_group:	a #ccss_selector_group_t that accumulates the results of the query.
- *
- * Query the stylesheet for styling information regarding a document node and collect the results.
- *
- * Returns: %TRUE if styling information has been found.
- **/
-bool
-ccss_stylesheet_query_collect (ccss_stylesheet_t const	*self,
-			      ccss_node_t const		*node, 
-			      bool			 as_base,
-			      ccss_selector_group_t	*result_group)
-{
-	ccss_node_class_t const		*node_class;
-	ccss_selector_group_t const	*group;
-	bool				 ret;
-
-	node_class = node->node_class;
-
-	g_return_val_if_fail (self && node && result_group, false);
-
-	ret = false;
-
-	/* Match wildcard styles. */
-	group = g_hash_table_lookup (self->groups, "*");
-	if (group) {
-		ret |= ccss_selector_group_query_collect (group, node, 
-							 false, result_group);
-	}			
-
-	/* match style by type information */
-	ret |= collect_type_r (self, node, node, as_base, result_group);
-
-	return ret;
-}
-
-/*
- * `iter' is used for the recursion.
- */
-static bool
 apply_type_r (ccss_stylesheet_t const	*self,
 	      ccss_node_t const		*node, 
 	      ccss_node_t const		*iter, 
