@@ -14,7 +14,6 @@ ccss_stylesheet_new_from_file
 ccss_stylesheet_load_from_file
 ccss_stylesheet_free
 ccss_stylesheet_query_type
-ccss_stylesheet_query_collect
 ccss_stylesheet_query_apply
 ccss_stylesheet_iter_init
 ccss_stylesheet_iter_next
